--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,18 @@
   <title>to-do-list</title>
 </head>
 <body>
-  <script src="bundle.js"></script>
+  <div class="container"> 
+    <h1 class="header">Today's To Do</h1>
+    <div class="addbox">
+      <input type="text" id="addlist" placeholder="add to your list">
+    </div>
+    <ul class="toDoList" id="toDoList">
+      <!-- <li class="task"> go to school</li>
+      <li class="task">play with malumbo</li> -->
+    </ul>
+    <button class="btn-clear" type="button">Clear all completed</button>
+
+
+  </div>
 </body>
 </html>
