--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
   <div class="container"> 
     <div class="header flex-end content">
       <h1>Today's To Do</h1>
-      <img class="icons" src="../img/20976.png" alt="Circular arrow" >
+      <i class="fas fa-sync-alt"></i>
     </div>
     
     <div class="addbox flex-end content">
       <input type="text" id="addlist" placeholder="add to your list">
-      <img class="icons" src="../img/20976.png" alt="Circular arrow">
+      <span class="enterArrow" id="arrow">&#8629;</span>
     </div>
     <ul class="toDoList" id="toDoList">
     </ul>
