--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,13 @@
       <i class="fas fa-sync-alt"></i>
     </div>
     
-    <div class="addbox flex-end content">
-      <input type="text" id="addlist" placeholder="add to your list">
-      <span class="enterArrow" id="arrow">&#8629;</span>
+    <div class="addbox content ">
+      <form class="flex-end ">
+      <input type="text" id="addlist" class="addlist" placeholder="add to your list">
+      <button class="btnToDo" type="submit">
+        <span class="enterArrow" id="arrow">&#8629;</span>
+      </button>
+    </form>
     </div>
     <ul class="toDoList" id="toDoList">
     </ul>
