Added function for removing completed Tasks

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,10 @@
     </div>
     <ul class="toDoList" id="toDoList">
     </ul>
-    <button class="btn-clear" type="button">Clear all completed</button>
+    <form action="">
+      <button class="btn-clear" type="submit">Clear all completed</button>
+    </form>
+    
 
 
   </div>
