Added funtion for edditing todoList items

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     </div>
     <ul class="toDoList" id="toDoList">
     </ul>
-    <form action="">
+    <form>
       <button class="btn-clear" type="submit">Clear all completed</button>
     </form>
     
